<?xml version="1.0"?>
<package format="2">
  <name>py_tree_pkg</name>
  <version>0.0.0</version>
  <description>Ein einfaches ROS2 Paket mit py-trees und py-trees-ros</description>
  <maintainer email="dein.email@beispiel.com">Dein Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>py-trees</depend>
  <depend>py-trees-ros</depend>
  <depend>py-trees-viewer</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
